--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
     "vue-material": "^1.0.0-beta-11",
+    "vue-typer": "^1.2.0",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
